--- a/static/index.html
+++ b/static/index.html
@@ -71,6 +71,7 @@ function drawCircle(context,entity) {
         var y = entity["y"];
         //moveTo(x,y);
         fillStyle = entity["colour"];
+        strokeStyle = fillStyle;
         linecap = "round"
         arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);  
         stroke();                                
@@ -143,9 +144,10 @@ function getPosition(e) {
 
 function addEntity(entity, data) {
     world[entity] = data;
-    drawNextFrame(); // (but should we?)
+    //drawNextFrame(); // (but should we?)
     //XXX: Send a XHTML Request that updates the entity you just  modified!
-    sendJSONXMLHTTPRequest("/entity/" + entity, world[entity])
+    sendJSONXMLHTTPRequest("/entity/" + entity, data, function(response){});
+    drawNextFrame();
 
 }
 
@@ -255,7 +257,7 @@ mouse = (function() {
 // Add the application specific mouse listeners!
 //XXX: TODO Make these prettier!
 mouse.mousedowners.push(function(x,y,clicked,e) {
-    // https://dev.to/akhil_001/generating-random-color-with-single-line-of-js-code-fhj, credit to Akhil Sai from May 12,2019. Accessed Nov 02, 2021
+    // https://dev.to/akhil_001/generating-random-color-with-single-line-of-js-code-fhj, credit to Akhil Sai from May 12,2019
     const color = Math.floor(Math.random()*16777215).toString(16);
     let randomcolor = '#'+color;
     addEntityWithoutName({'x':x,'y':y,'colour':randomcolor, 'radius':20});
@@ -273,9 +275,12 @@ mouse.mousedraggers.push(function(x,y,clicked,e) {
 function update() {
     //XXX: TODO Get the world from the webservice using a XMLHTTPRequest
     drawFrame();
-    sendJSONXMLHTTPRequest("/world", null, function(response){
+    url = '/world';
+    sendJSONXMLHTTPRequest('/world', null, function(response) {
+        world = response;
         drawNextFrame();
-    })
+    });
+
 }
 
 // 30 frames per second
